Fix gap on top between nav and home container

--- a/src/Components/About.scss
+++ b/src/Components/About.scss
@@ -1,7 +1,6 @@
 @import '../variables.scss';
 
 .about-container {
-  margin-top: 50px;
   background-image: url('../images/headshot-blacknwhite.png');
   background-color: rgba($color: $about-background, $alpha: 1);
   background-position: 100% 100%;
